src/compile_test/must_fail/bad_assign_2.rs
use bounded_types::*;

fn main() {
    let _ok: BoundedInt<0,10> = 'c'.into();
}